Checkstyle cleanup: Replaced instantiations of Integer with Integer.valueOf() or autoboxing Checkstyle cleanup: Replaced instantiations of Boolean with Boolean.TRUE/FALSE